some changes to be realistic

--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
                 { type: 'output', content: '  └─ HTML, CSS' },
                 { type: 'output', content: '' },
                 { type: 'category', content: '🛠️  TOOLS & FRAMEWORKS:' },
-                { type: 'output', content: '  ├─ Burp Suite, OWASP ZAP' },
+                { type: 'output', content: '  ├─ Burp Suite' },
                 { type: 'output', content: '  ├─ Frida, MobSF, ADB' },
                 { type: 'output', content: '  ├─ Nmap, Wireshark, Metasploit' },
-                { type: 'output', content: '  ├─ Git, Docker' },
+                { type: 'output', content: '  ├─ Git&Github' },
                 { type: 'output', content: '  └─ Fortigate & Palo Alto Firewalls' },
                 { type: 'output', content: '' },
                 { type: 'category', content: '🐧 OPERATING SYSTEMS:' },
@@ -381,11 +381,9 @@
                 { type: 'success', content: '╚═══════════════════════════════════════════════════════════╝' },
                 { type: 'output', content: '' },
                 { type: 'info', content: '📧 Email:    usif.mohammed.hamed@gmail.com' },
-                { type: 'info', content: '📱 Phone:    +20 1023218542' },
                 { type: 'info', content: '📍 Location: New Borg El Arab City, Alexandria, Egypt' },
                 { type: 'output', content: '' },
-                { type: 'output', content: 'Feel free to reach out for collaboration opportunities,' },
-                { type: 'output', content: 'security consultations, or just to connect!' },
+                { type: 'output', content: 'Feel free to reach out for collaboration opportunities.' },
                 { type: 'output', content: '' }
             ],
             social: () => [
@@ -412,7 +410,7 @@
                 { type: 'ascii', content: '     ╚═╝    ╚═════╝  ╚═════╝ ╚══════╝╚══════╝╚══════╝╚═╝     ' },
                 { type: 'output', content: '' },
                 { type: 'success', content: '         🔐 OFFENSIVE SECURITY SPECIALIST 🔐' },
-                { type: 'info', content: '              Penetration Tester | Bug Bounty Hunter' },
+                { type: 'info', content: '            Penetration Tester | Bug Bounty Hunter' },
                 { type: 'output', content: '' }
             ],
             whoami: () => [
